--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-cryptography==41.0.3
-pillow==9.3.0
-tkinter
+Pillow>=9.4.0,<10.0.0
+pandas>=1.5.3,<2.0.0
+openpyxl>=3.1.2,<4.0.0
+gpxpy>=1.5.0,<2.0.0
+fastkml>=0.12,<1.0.0
+geopy>=2.3.0,<3.0.0
+cryptography>=41.0.3,<42.0.0
